==> Broadcom/AFBR-S50-API/Sources/Platform/STM32F4xx/driver/s2pi.c <==
#include "s2pi.h"
#include "irq.h"
#include "dma.h"
#include "gpio.h"
#include "spi.h"
#include "board/board_config.h"
#define S2PI_GPIO_DELAY_US 10
#define S2PI_GPIO_DELAY() ((void)0)
#include "utility/time.h"
#define S2PI_GPIO_DELAY() Time_DelayUSec(S2PI_GPIO_DELAY_US)

status_t S2PI_Init(s2pi_slave_t defaultSlave,
                   uint32_t baudRate_Bps)
{
    MX_DMA_Init();
    MX_SPI1_Init();

    S2PI_InitPins();

    if (defaultSlave < 0)
        defaultSlave = S2PI_SLAVE1;

    if (defaultSlave > S2PI_SLAVE_COUNT)
        return ERROR_S2PI_INVALID_SLAVE;

    return S2PI_SetBaudRate(defaultSlave, baudRate_Bps);
}

status_t S2PI_SetBaudRate(s2pi_slave_t slave, uint32_t baudRate_Bps)
{
    (void) slave; // not used in this implementation
    uint32_t prescaler = 0;
    /* Determine the maximum value of the prescaler */
    for (; prescaler < 8; ++prescaler)
        if (SystemCoreClock >> (prescaler + 1) <= baudRate_Bps)
            break;
    MODIFY_REG(hspi1.Instance->CR1, SPI_CR1_BR, prescaler << SPI_CR1_BR_Pos);
    return STATUS_OK;
}

uint32_t S2PI_GetBaudRate(s2pi_slave_t slave)
{
    (void) slave; // not used in this implementation
    uint32_t prescaler = (hspi1.Instance->CR1 & SPI_CR1_BR) >> SPI_CR1_BR_Pos;
    return SystemCoreClock >> (prescaler + 1);
}

status_t S2PI_CaptureGpioControl(s2pi_slave_t slave)
{
    (void) slave; // not used in this implementation

    /* Check if something is ongoing. */
    IRQ_LOCK();
    status_t status = myS2PIHnd.Status;
    if (status != STATUS_IDLE)
    {
        IRQ_UNLOCK();
        return status;
    }
    myS2PIHnd.Status = STATUS_S2PI_GPIO_MODE;
    IRQ_UNLOCK();

    /* Note: Clock must be HI after capturing */
    HAL_GPIO_WritePin(myS2PIHnd.GPIOs[S2PI_CLK].Port, myS2PIHnd.GPIOs[S2PI_CLK].Pin, GPIO_PIN_SET);

    S2PI_SetGPIOMode(true);

    return STATUS_OK;
}

status_t S2PI_ReleaseGpioControl(s2pi_slave_t slave)
{
    (void) slave; // not used in this implementation

    /* Check if something is ongoing. */
    IRQ_LOCK();
    status_t status = myS2PIHnd.Status;
    if (status != STATUS_S2PI_GPIO_MODE)
    {
        IRQ_UNLOCK();
        return status;
    }
    myS2PIHnd.Status = STATUS_IDLE;
    IRQ_UNLOCK();

    S2PI_SetGPIOMode(false);

    return STATUS_OK;
}

status_t S2PI_WriteGpioPin(s2pi_slave_t slave, s2pi_pin_t pin, uint32_t value)
{
    /* Check if pin is valid. */
    if (pin > S2PI_IRQ || value > 1)
        return ERROR_INVALID_ARGUMENT;

    /* Check if in GPIO mode. */
    if(myS2PIHnd.Status != STATUS_S2PI_GPIO_MODE)
        return ERROR_S2PI_INVALID_STATE;

    if (pin == S2PI_CS)
    {
        GPIO_PinState pinState = value ? GPIO_PIN_SET : GPIO_PIN_RESET;
        switch (slave)
        {
            case S2PI_SLAVE1:
                HAL_GPIO_WritePin(S2PI_CS1_GPIO, S2PI_CS1_GPIO_PIN, pinState);
                break;

#if S2PI_SLAVE_COUNT >= 2
            case S2PI_SLAVE2:
                HAL_GPIO_WritePin(S2PI_CS2_GPIO, S2PI_CS2_GPIO_PIN, pinState);
                break;
#endif

#if S2PI_SLAVE_COUNT >= 3
            case S2PI_SLAVE3:
                HAL_GPIO_WritePin(S2PI_CS3_GPIO, S2PI_CS3_GPIO_PIN, pinState);
                break;
#endif

#if S2PI_SLAVE_COUNT >= 4
            case S2PI_SLAVE4:
                HAL_GPIO_WritePin(S2PI_CS4_GPIO, S2PI_CS4_GPIO_PIN, pinState);
                break;
#endif

            default:
                return ERROR_S2PI_INVALID_SLAVE;
        }
    }
    else
    {
        HAL_GPIO_WritePin(myS2PIHnd.GPIOs[pin].Port, myS2PIHnd.GPIOs[pin].Pin, value);
    }

    S2PI_GPIO_DELAY();

    return STATUS_OK;
}

status_t S2PI_ReadGpioPin(s2pi_slave_t slave, s2pi_pin_t pin, uint32_t * value)
{
    /* Check if pin is valid. */
    if (pin > S2PI_IRQ || !value)
        return ERROR_INVALID_ARGUMENT;

    /* Check if in GPIO mode. */
    if(myS2PIHnd.Status != STATUS_S2PI_GPIO_MODE)
        return ERROR_S2PI_INVALID_STATE;

    if (pin == S2PI_CS)
    {
        switch (slave)
        {
            case S2PI_SLAVE1:
                *value = HAL_GPIO_ReadPin(S2PI_CS1_GPIO, S2PI_CS1_GPIO_PIN);
                break;

#if S2PI_SLAVE_COUNT >= 2
            case S2PI_SLAVE2:
                *value = HAL_GPIO_ReadPin(S2PI_CS2_GPIO, S2PI_CS2_GPIO_PIN);
                break;
#endif

#if S2PI_SLAVE_COUNT >= 3
            case S2PI_SLAVE3:
                *value = HAL_GPIO_ReadPin(S2PI_CS3_GPIO, S2PI_CS3_GPIO_PIN);
                break;
#endif

#if S2PI_SLAVE_COUNT >= 4
            case S2PI_SLAVE4:
                *value = HAL_GPIO_ReadPin(S2PI_CS4_GPIO, S2PI_CS4_GPIO_PIN);
                break;
#endif

            default:
                return ERROR_S2PI_INVALID_SLAVE;
        }
    }
    else
    {
        *value = HAL_GPIO_ReadPin(myS2PIHnd.GPIOs[pin].Port, myS2PIHnd.GPIOs[pin].Pin);
    }

    S2PI_GPIO_DELAY();

    return STATUS_OK;
}

status_t S2PI_CycleCsPin(s2pi_slave_t slave)
{
    /* Check the driver status. */
    IRQ_LOCK();
    status_t status = myS2PIHnd.Status;
    if ( status != STATUS_IDLE )
    {
        IRQ_UNLOCK();
        return status;
    }
    myS2PIHnd.Status = STATUS_BUSY;
    IRQ_UNLOCK();

    status = STATUS_OK;
    switch (slave)
    {
        case S2PI_SLAVE1:
            HAL_GPIO_WritePin(S2PI_CS1_GPIO, S2PI_CS1_GPIO_PIN, GPIO_PIN_RESET);
            HAL_GPIO_WritePin(S2PI_CS1_GPIO, S2PI_CS1_GPIO_PIN, GPIO_PIN_SET);
            break;

#if S2PI_SLAVE_COUNT >= 2
        case S2PI_SLAVE2:
            HAL_GPIO_WritePin(S2PI_CS2_GPIO, S2PI_CS2_GPIO_PIN, GPIO_PIN_RESET);
            HAL_GPIO_WritePin(S2PI_CS2_GPIO, S2PI_CS2_GPIO_PIN, GPIO_PIN_SET);
            break;
#endif

#if S2PI_SLAVE_COUNT >= 3
        case S2PI_SLAVE3:
            HAL_GPIO_WritePin(S2PI_CS3_GPIO, S2PI_CS3_GPIO_PIN, GPIO_PIN_RESET);
            HAL_GPIO_WritePin(S2PI_CS3_GPIO, S2PI_CS3_GPIO_PIN, GPIO_PIN_SET);
            break;
#endif

#if S2PI_SLAVE_COUNT >= 4
        case S2PI_SLAVE4:
            HAL_GPIO_WritePin(S2PI_CS4_GPIO, S2PI_CS4_GPIO_PIN, GPIO_PIN_RESET);
            HAL_GPIO_WritePin(S2PI_CS4_GPIO, S2PI_CS4_GPIO_PIN, GPIO_PIN_SET);
            break;
#endif

        default:
            status = ERROR_S2PI_INVALID_SLAVE;
    }

    myS2PIHnd.Status = STATUS_IDLE;

    return status;
}

status_t S2PI_TransferFrame(s2pi_slave_t slave,
                            uint8_t const * txData,
                            uint8_t * rxData,
                            size_t frameSize,
                            s2pi_callback_t callback,
                            void * callbackData)
{
    /* Verify arguments. */
    if (!txData || frameSize == 0 || frameSize > UINT16_MAX)
        return ERROR_INVALID_ARGUMENT;

    /* Check the driver status, lock if idle. */
    IRQ_LOCK();
    status_t status = myS2PIHnd.Status;
    if (status != STATUS_IDLE)
    {
        IRQ_UNLOCK();
        return status;
    }
    myS2PIHnd.Status = STATUS_BUSY;
    IRQ_UNLOCK();

    /* Set the callback information */
    myS2PIHnd.Callback = callback;
    myS2PIHnd.CallbackData = callbackData;

    /* Manually set the chip select (active low) */
    status = S2PI_SetSlaveInternal(slave);
    if (status == STATUS_OK)
    {
        HAL_GPIO_WritePin(myS2PIHnd.GPIOs[S2PI_CS].Port, myS2PIHnd.GPIOs[S2PI_CS].Pin, GPIO_PIN_RESET);
    }

    HAL_StatusTypeDef hal_error;

    /* Lock interrupts to prevent completion interrupt before setup is complete */
    IRQ_LOCK();
    if (rxData)
        hal_error = HAL_SPI_TransmitReceive_DMA(&hspi1, (uint8_t *) txData, rxData, (uint16_t) frameSize);
    else
        hal_error = HAL_SPI_Transmit_DMA(&hspi1, (uint8_t *) txData, (uint16_t) frameSize);
    IRQ_UNLOCK();

    if (hal_error != HAL_OK)
        //return ERROR_FAIL;
        return -1000-hal_error;

    return status;
}

static inline status_t S2PI_CompleteTransfer(status_t status)
{
    myS2PIHnd.Status = STATUS_IDLE;

    /* Deactivate CS (set high), as we use GPIO pin */
    HAL_GPIO_WritePin(myS2PIHnd.GPIOs[S2PI_CS].Port, myS2PIHnd.GPIOs[S2PI_CS].Pin, GPIO_PIN_SET);

    /* Invoke callback if there is one */
    if (myS2PIHnd.Callback != 0)
    {
        s2pi_callback_t callback = myS2PIHnd.Callback;
        myS2PIHnd.Callback = 0;
        status = callback(status, myS2PIHnd.CallbackData);
    }
    return status;
}

status_t S2PI_Abort(s2pi_slave_t slave)
{
    (void) slave; // not used in this implementation

    status_t status = myS2PIHnd.Status;

    /* Check if something is ongoing. */
    if(status == STATUS_IDLE)
    {
        return STATUS_OK;
    }

    /* Abort SPI transfer. */
    if(status == STATUS_BUSY)
    {
        HAL_SPI_Abort(&hspi1);
        myS2PIHnd.Status = STATUS_IDLE;
    }

    status = S2PI_CompleteTransfer(ERROR_ABORTED);
    if(status == ERROR_ABORTED) status = STATUS_OK;

    return STATUS_OK;
}

status_t S2PI_SetIrqCallback(s2pi_slave_t slave,
                             s2pi_irq_callback_t callback,
                             void * callbackData)
{
    if (slave > S2PI_SLAVE_COUNT)
        return ERROR_S2PI_INVALID_SLAVE;

    myS2PIHnd.IrqCallback[slave] = callback;
    myS2PIHnd.IrqCallbackData[slave] = callbackData;

    return STATUS_OK;
}

uint32_t S2PI_ReadIrqPin(s2pi_slave_t slave)
{
    /* NOTE: this must return 0 if an interrupt is pending, i.e. if
     * the interrupt is pending AND the pin is in low state. */
    switch (slave)
    {
        case S2PI_SLAVE1:
            return !(HAL_NVIC_GetPendingIRQ(S2PI_IRQ1_EXTI)
                     && !HAL_GPIO_ReadPin(S2PI_IRQ1_GPIO, S2PI_IRQ1_GPIO_PIN));

#if S2PI_SLAVE_COUNT >= 2
        case S2PI_SLAVE2:
            return !(HAL_NVIC_GetPendingIRQ(S2PI_IRQ2_EXTI)
                     && !HAL_GPIO_ReadPin(S2PI_IRQ2_GPIO, S2PI_IRQ2_GPIO_PIN));
#endif

#if S2PI_SLAVE_COUNT >= 3
        case S2PI_SLAVE3:
            return !(HAL_NVIC_GetPendingIRQ(S2PI_IRQ3_EXTI)
                     && !HAL_GPIO_ReadPin(S2PI_IRQ3_GPIO, S2PI_IRQ3_GPIO_PIN));
#endif

#if S2PI_SLAVE_COUNT >= 4
        case S2PI_SLAVE4:
            return !(HAL_NVIC_GetPendingIRQ(S2PI_IRQ4_EXTI)
                     && !HAL_GPIO_ReadPin(S2PI_IRQ4_GPIO, S2PI_IRQ4_GPIO_PIN));
#endif

        default:
            return 1U;
    }
}
